EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/16/2009==
Derision: Old corpses summoned by Expedient Recovery will no longer rebury after 5 seconds.
Derision: Added optional duration parameter to quest::popup.
Trevius: SoF - Adventure Merchant Selling is now functional.

==06/15/2009==
Trevius: SoF - The following fields now show up on items that have values set for them, but the stats are not actually used by the server yet:
	       svcorruption, purity, backstabdmg, dsmitigation, heroic_str, heroic_int, heroic_wis, heroic_agi, heroic_dex, heroic_sta
	       heroic_cha, heroic_mr, heroic_fr, heroic_cr, heroic_dr, heroic_pr, heroic_svcorrup, healamt, and spelldmg
Trevius: SoF - Corrected Max Stat calculation for SoF clients over level 75.
Trevius: Fix for compile error; should have been fixed already *hint*.
Trevius: More tweaks to make illusions work better with features and armor/helm graphics
Trevius: Added alias #rf for the #randomfeatures command. Note that the feature changes are not permanent.
Trevius: Changed the default way of loading spells to now load from the spells_new table instead of from the spells_us.txt file.
Derision: Implemented the Title Window.
KLS: Aggro tweaks.
KLS: Fixes to compile errors/warnings.

Required SQL: \utils\sql\svn\665_heroic_resists.sql
Required SQL: utils/sql/svn/667_titles.sql

Recommended SQL: (This is recommended for databases that don't stay current with PEQ or are custom)
UPDATE items SET backstabdmg = damage WHERE backstabdmg = 0 AND itemtype = 2;

Warning: If you do not have a spells_new table yet, you must create one and load spells into it or zones will crash when loading in.
	 To create the spells_new table, use the SQL from \utils\sql\svn\230_spells_table.sql
	 After creating the table, you can import or export your spells from the spells_us.txt file by using the scripts:
	 import_spells.pl
	 export_spells.pl
	 